fix target floor error